--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-comfortaa);
   --font-mono: var(--font-comfortaa);
+  --font-display: var(--font-barabara);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
