--- a/app/custom.css
+++ b/app/custom.css
@@ -3,3 +3,15 @@
   color: #333333;
   text-transform: uppercase;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
